# mts-churn-rate

./: .gitignore  README.md  pyproject.toml
data/processed/: processed_data.csv
models/v1/: best_params.json  cbm.pkl  metrics.json  test_with_scores.csv  threshold.json
notebooks/: eda.ipynb  error_analysis.ipynb
src/: make_dataset.py  predict.py  test.py  train_model.py
src/samples/: test_sample.json
