[project]
name = "mts-churn-rate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
